    encoding-related crashes in eg, Propellor.Property.File.
  * Add --build option to simply build config.hs.
  * More informative usage message. Thanks, Daniel Brooks
  * Tor.hiddenService' added to support multiple ports.
    Thanks, Félix Sipma.
  * Apt.noPDiffs added.
    Thanks, Sean Whitton.
  * stack.yaml: Compile with GHC 8.0.1 against lts-7.16.
    Thanks, Andrew Cowie.

 -- Joey Hess <id@joeyh.name>  Sat, 24 Dec 2016 15:06:36 -0400

propellor (3.2.3) unstable; urgency=medium

  * Improve extraction of gpg secret key id list, to work with gpg 2.1.
  * The propellor wrapper checks if ./config.hs exists; if so it runs
    using the configuration in the current directory, rather than
    ~/.propellor/config.hs
  * Debootstap: Fix too tight permissions lock down of debootstrapped
    chroots, which prevented non-root users from doing anything in the
    chroot.

 -- Joey Hess <id@joeyh.name>  Tue, 22 Nov 2016 11:36:18 -0400

propellor (3.2.2) unstable; urgency=medium

  * Added Linode.serialGrub property.
  * Clean up build warnings about redundant constraints when built with ghc 8.0.
  * Added Group.hasUser property. Thanks, Daniel Brooks

 -- Joey Hess <id@joeyh.name>  Fri, 11 Nov 2016 17:54:44 -0400

propellor (3.2.1) unstable; urgency=medium

  * Simplify Debootstrap.sourceInstall since #770217 was fixed.
  * Debootstap.installed: Fix inverted logic that made this never install
    debootstrap. Thanks, mithrandi.

 -- Joey Hess <id@joeyh.name>  Mon, 03 Oct 2016 18:06:31 -0400

propellor (3.2.0) unstable; urgency=medium

  [ Sean Whitton ]
  * Using ccache with Sbuild.built & Sbuild.builtFor is now toggleable: these
    properties now take a parameter of type Sbuild.UseCcache.  (API Change)
  * Sbuild.piupartsConf: no longer takes an Apt.Url. (API Change)
  * Sbuild.piupartsConf & Sbuild.piupartsConfFor: does nothing if corresponding
    schroot not built.
    Previously, these properties built the schroot if it was missing.