@@ -10,6 +10,8 @@ propellor (3.2.4) UNRELEASED; urgency=medium
     Thanks, Sean Whitton.
   * stack.yaml: Compile with GHC 8.0.1 against lts-7.16.
     Thanks, Andrew Cowie.
+  * Added Propellor.Property.File.configFileName and related functions
+    to generate good filenames for config directories.
 
  -- Joey Hess <id@joeyh.name>  Sat, 24 Dec 2016 15:06:36 -0400
 
